# st_calen

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  build.yaml  firestore.rules  pubspec.yaml
.fvm/: flutter_sdk
android/app/: build.gradle  google-services.json
docs/plans/: 2026-05-29-step10-backend-implementation.md
ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  table_calendar.dart
lib/app/: app.dart  bootstrap.dart  router.dart
lib/app/theme/: app_theme.dart  (+4 more)
lib/calendar_src/: calendar.dart
lib/common/: keyboard_visibility.dart
lib/repo/: repo.dart
stitch_stock_market_calendar_v2/_1/: code.html
stitch_stock_market_calendar_v2/_10/: code.html
stitch_stock_market_calendar_v2/_11/: code.html
stitch_stock_market_calendar_v2/_2/: code.html
stitch_stock_market_calendar_v2/_3/: code.html
stitch_stock_market_calendar_v2/_4/: code.html
stitch_stock_market_calendar_v2/_5/: code.html
stock_calendar_backend/: .gitignore  EXECUTION.md  README.md  alembic.ini  pyproject.toml
stock_calendar_backend/alembic/: env.py
stock_calendar_backend/alembic/versions/: 0001_init.py
stock_calendar_backend/app/: config.py  db.py  main.py  models.py
stock_calendar_backend/app/sources/: twse.py  types.py
stock_calendar_backend/tests/: conftest.py  test_db.py  test_health.py  test_models.py
stock_calendar_backend/tests/sources/: test_twse.py
stock_calendar_backend/tests/sources/fixtures/: twse_stock_day_all.json  twse_stock_day_all_dirty.json
web/: index.html  manifest.json
(+170 files in other folders)
