[project]
name = "stock-calendar-backend"
version = "0.1.0"
description = "Backend for stock.wisplu.com.tw — stock search / quotes / health (FastAPI + Postgres)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "gunicorn==26.0.0",
    "sqlalchemy==2.0.50",
    "psycopg[binary]==3.3.4",
    "alembic==1.18.4",
    "httpx==0.28.1",
    "apscheduler==3.11.2",
    "pydantic-settings==2.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "respx==0.23.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
